# Red-Eye-Correction

./: CMakeLists.txt  README.md  test11  test12
src/: main.cpp  pre_processing.cpp  pre_processing.h  red_eye.cpp  red_eye.h
